--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "edition",
-    "description": "A clean, minimal newsletter theme for the Ghost publishing platform",
+    "name": "edition-enhanced",
+    "description": "An enhanced version of the Edition theme for the Ghost publishing platform",
     "version": "1.0.0",
     "engines": {
         "ghost": ">=4.0.0",
@@ -8,9 +8,8 @@
     },
     "license": "MIT",
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "Josh T. Bernstein",
+        "url": "https://joshtbernstein.com"
     },
     "keywords": [
         "ghost",
